Selenium: Make it more obvious and distinguishable between variable name and it's value
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/1_install/variables.html
+++ b/Selenium/1_install/variables.html
@@ -18,22 +18,22 @@
 </tr>
 <tr>
 	<td>store</td>
-	<td>database name</td>
+	<td>[Enter database name here]</td>
 	<td>db_name</td>
 </tr>
 <tr>
 	<td>store</td>
-	<td>database user name</td>
+	<td>[Enter database user name here]</td>
 	<td>db_user</td>
 </tr>
 <tr>
 	<td>store</td>
-	<td>datebase password</td>
+	<td>[Enter datebase password here]</td>
 	<td>db_pwd</td>
 </tr>
 <tr>
 	<td>store</td>
-	<td>user1 password</td>
+	<td>[Enter user1 password here]</td>
 	<td>user1_pwd</td>
 </tr>
 <tr>
