Selenium: added variable to store phpmyadmin path in 0_install
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/1_install/clear database.html
+++ b/Selenium/1_install/clear database.html
@@ -15,7 +15,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>http://sv2.insights.net.au:2086/3rdparty/phpMyAdmin/index.php?db=${db_name}</td>
+	<td>${phpmyadmin}/index.php?db=${db_name}</td>
 	<td></td>
 </tr>
 <tr>
