--- a/Selenium/1_install/variables.html
+++ b/Selenium/1_install/variables.html
@@ -41,6 +41,11 @@
 	<td>Site Name</td>
 	<td>sitename</td>
 </tr>
+<tr>
+	<td>sort</td>
+	<td>(Optional) [Enter phpmyadmin path here]</td>
+	<td>phpmyadmin</td>
+</tr>
 </tbody></table>
 </body>
 </html>
