Selenium: fix typo store in 1_install
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/1_install/variables.html
+++ b/Selenium/1_install/variables.html
@@ -42,7 +42,7 @@
 	<td>sitename</td>
 </tr>
 <tr>
-	<td>sort</td>
+	<td>store</td>
 	<td>(Optional) [Enter phpmyadmin path here]</td>
 	<td>phpmyadmin</td>
 </tr>
