Selenium: Separate clear database into it's own suite
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/0_clear database/Suite.html
+++ b/Selenium/0_clear database/Suite.html
@@ -9,8 +9,7 @@
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="variables.html">variables</a></td></tr>
-<tr><td><a href="drupal installation (standard) pt1.html">drupal installation (standard) pt1</a></td></tr>
-<tr><td><a href="drupal installation (standard) pt2.html">drupal installation (standard) pt2</a></td></tr>
+<tr><td><a href="clear database.html">clear database (optional)</a></td></tr>
 </tbody></table>
 </body>
 </html>
