--- a/Selenium/0_clear database/variables.html
+++ b/Selenium/0_clear database/variables.html
@@ -13,33 +13,13 @@
 </thead><tbody>
 <tr>
 	<td>store</td>
-	<td>http://www.site.com</td>
-	<td>basepath</td>
+	<td>[Enter phpmyadmin path here]</td>
+	<td>phpmyadmin</td>
 </tr>
 <tr>
 	<td>store</td>
 	<td>[Enter database name here]</td>
 	<td>db_name</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>[Enter database user name here]</td>
-	<td>db_user</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>[Enter datebase password here]</td>
-	<td>db_pwd</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>[Enter user1 password here]</td>
-	<td>user1_pwd</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>Site Name</td>
-	<td>sitename</td>
 </tr>
 </tbody></table>
 </body>
