--- a/Selenium/2_configure/system/enable modules.html
+++ b/Selenium/2_configure/system/enable modules.html
@@ -212,6 +212,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>edit-modules-other-better-formats-enable</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>edit-modules-other-block-titlelink-enable</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>edit-submit</td>
 	<td></td>
