--- a/Selenium/2_configure/Suite.html
+++ b/Selenium/2_configure/Suite.html
@@ -22,6 +22,7 @@
 <tr><td><a href="modules/Iconizer.html">Iconizer</a></td></tr>
 <tr><td><a href="site_config/Text formats.html">Text formats</a></td></tr>
 <tr><td><a href="modules/WYSIWYG.html">WYSIWYG</a></td></tr>
+<tr><td><a href="site_config/Block.html">Block</a></td></tr>
 </tbody></table>
 </body>
 </html>
