Selenium: Admin and Editor can Access administration menu
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/2_configure/site_config/user permission.html
+++ b/Selenium/2_configure/site_config/user permission.html
@@ -92,6 +92,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>edit-4-access-administration-menu</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>edit-5-access-administration-menu</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>edit-submit</td>
 	<td></td>
