Selenium: Set Masquerade block to show to administrator role only
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/2_configure/Suite.html
+++ b/Selenium/2_configure/Suite.html
@@ -23,6 +23,7 @@
 <tr><td><a href="site_config/Text formats.html">Text formats</a></td></tr>
 <tr><td><a href="modules/WYSIWYG.html">WYSIWYG</a></td></tr>
 <tr><td><a href="site_config/Block.html">Block</a></td></tr>
+<tr><td><a href="modules/Masquerade.html">Masquerade</a></td></tr>
 </tbody></table>
 </body>
 </html>
