Admin able flush cache
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/2_configure/site_config/user permission.html
+++ b/Selenium/2_configure/site_config/user permission.html
@@ -102,6 +102,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>edit-4-flush-caches</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>edit-submit</td>
 	<td></td>
