--- a/Selenium/2_configure/site_config/user permission.html
+++ b/Selenium/2_configure/site_config/user permission.html
@@ -107,6 +107,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>edit-4-administer-permissions</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>edit-submit</td>
 	<td></td>
