admin and editor can "Access the administrative overlay"
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/2_configure/site_config/user permission.html
+++ b/Selenium/2_configure/site_config/user permission.html
@@ -112,6 +112,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>edit-4-access-overlay</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>edit-5-access-overlay</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>edit-submit</td>
 	<td></td>
