user role: admin and editor can "View the administration theme "
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/2_configure/site_config/user permission.html
+++ b/Selenium/2_configure/site_config/user permission.html
@@ -122,6 +122,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>edit-4-view-the-administration-theme</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>edit-5-view-the-administration-theme</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>edit-submit</td>
 	<td></td>
