add menu per role module enable it
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/2_configure/system/enable modules.html
+++ b/Selenium/2_configure/system/enable modules.html
@@ -217,6 +217,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>edit-modules-access-control-menu-per-role-enable</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>edit-submit</td>
 	<td></td>
