1. Add People in default shortcuts 2. Add "Add user" in default shortcuts
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/2_configure/Suite.html
+++ b/Selenium/2_configure/Suite.html
@@ -24,6 +24,7 @@
 <tr><td><a href="modules/WYSIWYG.html">WYSIWYG</a></td></tr>
 <tr><td><a href="site_config/Block.html">Block</a></td></tr>
 <tr><td><a href="modules/Menu per role.html">Menu per role</a></td></tr>
+<tr><td><a href="modules/Shortcuts.html">Shortcuts</a></td></tr>
 </tbody></table>
 </body>
 </html>
