Handle modules installation and uninstallation in drush and taken them out from selenium
Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/Suite.html
+++ b/Selenium/Suite.html
@@ -9,8 +9,8 @@
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="variables.html">variables</a></td></tr>
-<tr><td><a href="system/enable modules.html">enable modules</a></td></tr>
-<tr><td><a href="system/uninstall unwanted modules.html">uninstall unwanted modules</a></td></tr>
+<!-- <tr><td><a href="system/enable modules.html">enable modules</a></td></tr> -->
+<!-- <tr><td><a href="system/uninstall unwanted modules.html">uninstall unwanted modules</a></td></tr> -->
 <tr><td><a href="site_config/content type.html">content type</a></td></tr>
 <tr><td><a href="site_config/account settings.html">account settings</a></td></tr>
 <tr><td><a href="site_config/user role.html">user role</a></td></tr>
