--- a/Selenium/Suite.html
+++ b/Selenium/Suite.html
@@ -21,6 +21,7 @@
 <tr><td><a href="site_config/Text formats.html">Text formats</a></td></tr>
 <tr><td><a href="modules/WYSIWYG.html">WYSIWYG</a></td></tr>
 <tr><td><a href="site_config/Block.html">Block</a></td></tr>
+<tr><td><a href="modules/xmlsitemap.html">xmlsitemap</a></td></tr>
 </tbody></table>
 </body>
 </html>
