--- a/Selenium/Suite.html
+++ b/Selenium/Suite.html
@@ -22,6 +22,7 @@
 <tr><td><a href="modules/WYSIWYG.html">WYSIWYG</a></td></tr>
 <tr><td><a href="site_config/Block.html">Block</a></td></tr>
 <tr><td><a href="modules/xmlsitemap.html">xmlsitemap</a></td></tr>
+<tr><td><a href="modules/pathauto.html">pathauto</a></td></tr>
 </tbody></table>
 </body>
 </html>
