sh: Reorder process se: add run cron at the end Signed-off-by: Kelvin Wong <kelvin@insights.net.au>

--- a/Selenium/Suite.html
+++ b/Selenium/Suite.html
@@ -23,6 +23,7 @@
 <tr><td><a href="site_config/Block.html">Block</a></td></tr>
 <tr><td><a href="modules/xmlsitemap.html">xmlsitemap</a></td></tr>
 <tr><td><a href="modules/pathauto.html">pathauto</a></td></tr>
+<tr><td><a href="system/run cron.html">run cron</a></td></tr>
 </tbody></table>
 </body>
 </html>
